; ModuleID = '/home/carl/AnghaBench/kphp-kdb/support/extr_support-data.c_do_set_mark.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/support/extr_support-data.c_do_set_mark.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_support_set_mark = type { i32 }

@LEV_SUPPORT_SET_MARK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_set_mark(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.lev_support_set_mark*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @LEV_SUPPORT_SET_MARK, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.lev_support_set_mark* @alloc_log_event(i32 %6, i32 4, i32 %7)
  store %struct.lev_support_set_mark* %8, %struct.lev_support_set_mark** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.lev_support_set_mark*, %struct.lev_support_set_mark** %5, align 8
  %11 = getelementptr inbounds %struct.lev_support_set_mark, %struct.lev_support_set_mark* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.lev_support_set_mark*, %struct.lev_support_set_mark** %5, align 8
  %13 = call i32 @set_mark(%struct.lev_support_set_mark* %12)
  ret i32 %13
}

declare dso_local %struct.lev_support_set_mark* @alloc_log_event(i32, i32, i32) #1

declare dso_local i32 @set_mark(%struct.lev_support_set_mark*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
